# rust-embedded-course

./: Dockerfile  Makefile.toml  README.md  typos.toml
.github/workflows/: docker-image.yml  mdbook.yml
A-minimal-flash/: Cargo.toml  Embed.toml  README.md
A-minimal-flash/src/: main.rs
B-minimal-blinky/: Cargo.toml  README.md  rust-analyzer.json
B-minimal-blinky/.cargo/: config.toml
B-minimal-blinky/src/: main.rs
C-full-bsp/: Cargo.toml  README.md
C-full-bsp/.cargo/: config.toml
C-full-bsp/src/: main.rs
D-heap-allocation/: Cargo.toml  README.md  bacon.toml
D-heap-allocation/src/: main.rs
course/: book.toml
course/src/: 00-home.md  01-environment-setup.md  02-booting-a-microcontroller.md  03-interacting-with-peripherals.md  04-an-aside-for-RTT-and-GDB.md  05-levels-of-abstraction.md  06-conclusions.md  SUMMARY.md
