[package]
edition = "2021"
name = "A-minimal-flash"
version = "0.1.0"

[dependencies]
# For ARM M-Series microcontrollers
cortex-m = "0.7"
cortex-m-rt = "0.7"

# Second stage bootloader, normally handled by the BSP
rp2040-boot2 = "0.3"

# Panic handler
panic-halt = "0.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = true
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug-assertions = false
incremental = true
lto = true
opt-level = 3
# Stripping debug information makes rtt weird
debug = true
strip = false

# cargo test
[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
