[package]
edition = "2021"
name = "C-full-bsp"
version = "0.1.0"

[dependencies]
# For ARM M-Series microcontrollers
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

# Debug probe printing
defmt = "0.3"
defmt-rtt = "0.4"

# Panic handler
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Board support package (BSP)
rp-pico = "0.9"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = true
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug-assertions = false
incremental = true
lto = true
opt-level = 3
# Stripping debug information makes rtt weird
debug = true
strip = false

# cargo test
[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
